--- a/index.html
+++ b/index.html
@@ -687,9 +687,8 @@
                     <div class="tactic-details">
                         <div class="detail-item">
                             <strong>Platform Strategy</strong>
-                            <p>Facebook: 40% budget - carousel ads, video content<br>
-                            Instagram: 40% budget - stories, reels, feed posts<br>
-                            Twitter: 20% budget - promoted tweets, trending topics</p>
+                            <p>Facebook: 50% budget - carousel ads, video content<br>
+                            Instagram: 50% budget - stories, reels, feed posts</p>
                         </div>
                         <div class="detail-item">
                             <strong>Audience Targeting</strong>
